Change owner of /usr/local/go on build VM
Otherwise "go get -tags netgo" fails with the permission denied error.

--- a/circle.yml
+++ b/circle.yml
@@ -24,6 +24,7 @@ dependencies:
     - cd $SRCDIR/test; ./gce.sh make_template:
         parallel: false
     - "cd $SRCDIR/build; ../tools/rebuild-image weaveworks/weavebuild . Dockerfile build.sh && touch $SRCDIR/.build.uptodate"
+    - "sudo chown -R ubuntu /usr/local/go"
 
 test:
   override:
